# projet-ing1-s1-2023-2024-snoopy-snoopy-x

./: .gitignore  CMakeLists.txt  balle.c  balle.h  ecranConsole.c  ecranConsole.h  exempleTableau.c  main.c  menu.c  partie.c  partie.h  personnage.c  personnage.h  plateau.c  plateau.h
Affichage/: ecranConsole.c  ecranConsole.h  exempleTableau.c  menu.h  plateau.c  plateau.h
Menu/: mdp.c  mdp.h  menu.c  menu.h  regles.c  regles.h
Partie/: partie.c  partie.h
consoleDebug/: consoleDebug.c  consoleDebug.h
couleursPrintf/: couleursPrintf.c  couleursPrintf.h
entitees/: Oiseaux.c  Oiseaux.h  balle.c  balle.h  blocs.c  blocs.h  conversionCoordonnees.c  conversionCoordonnees.h  personnage.c  personnage.h
niveaux/: Scores.c  Scores.h  chargerNiveaux.c  chargerNiveaux.h  niveaux.c  niveaux.h
niveaux/Niveau1/: Niveau1.c  Niveau1.h  niveau1.txt
niveaux/Niveau2/: Niveau2.c  Niveau2.h  niveau2.txt
niveaux/Niveau3/: Niveau3.c  Niveau3.h  niveau3.txt
niveaux/Niveau4/: Niveau3.c  Niveau4.c  Niveau4.h
sauvegardes/: sauvegardes.c  sauvegardes.h  save1  save1.txt  save2  save2.txt
